--- a/docs/docs/tutorial/part-3/index.mdx
+++ b/docs/docs/tutorial/part-3/index.mdx
@@ -138,7 +138,7 @@ The specifics of this step will be different based on what the plugin does. Some
 
 ![The general process for using a plugin: Install with npm, configure in your gatsby-config.js file, and use in your site (when needed).](./plugin-process.png)
 
-The next few sections will walk you through the process of adding a plugin to your site. You'll use the `gatsby-plugin-image` plugin to add performant images to your site.
+The next few sections will walk you through the process of adding a plugin to your site. You'll use the `gatsby-plugin-image` plugin to add preformatted images to your site.
 
 ### Task: Use `gatsby-plugin-image` to add a static image to your home page
 
